@@ -6,6 +6,7 @@ Version 1.9.1
 - CHG: Update TortoisePlink. (Stefan)
 - CHG: Moved all commands to the front view in
        TortoiseMerge. (Stefan)
+- CHG: Reintroduce the LogFindCopyFrom setting. (Stefan)
 - CHG: Updating a sparse checkout remembers the
        state of hidden items as well. (Stefan)
 - BUG: When Aero dialogs are disabled, the merge dlg
